--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="container">
         <h1>Add PWA to Your Device</h1>
-        <input type="text" id="urlInput" placeholder="Enter URL">
+        <label for="nameInput">Name:</label>
+        <input type="text" id="nameInput" placeholder="Enter PWA name"><br>
+        <label for="versionInput">Version:</label>
+        <input type="text" id="versionInput" placeholder="Enter PWA version"><br>
+        <label for="urlInput">URL:</label>
+        <input type="text" id="urlInput" placeholder="Enter URL"><br>
         <button onclick="addPWA()">Add PWA</button>
     </div>
 </body>
