--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PWA for PWA</title>
+    <title>Add PWA</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="container">
-        <h1>PWA for PWA</h1>
-        <p>Enter the necessary details to install a new PWA:</p>
+        <h1>Add PWA to Your Device</h1>
         <label for="nameInput">Name:</label>
         <input type="text" id="nameInput" placeholder="Enter PWA name"><br>
         <label for="versionInput">Version:</label>
@@ -18,7 +18,6 @@
         <input type="text" id="urlInput" placeholder="Enter URL"><br>
         <button onclick="addPWA()">Add PWA</button>
     </div>
-
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
